--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,7 @@ required-features = ["binaries"]
 error-chain = "0.11.0-rc.2"
 histogram = "0.6.6"
 memmap = "0.5.2"
+rad = { git = "https://github.com/sdleffler/rad-rs" }
 seahash = "3.0.5"
 serde = "1.0.11"
 serde_derive = "1.0.11"
@@ -22,9 +23,6 @@ toml = "0.4.4"
 [dependencies.clap]
 optional = true
 version = "2.26.0"
-
-[dependencies.rad]
-path = "../rad-rs"
 
 [features]
 binaries = ["clap"]
