--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,20 +9,33 @@ name = "attaca"
 required-features = ["binaries"]
 
 [dependencies]
+bincode = "0.8.0"
+colosseum = "0.1.1"
+digest = "0.6.2"
+digest-writer = "0.2.0"
 error-chain = "0.11.0-rc.2"
 histogram = "0.6.6"
 memmap = "0.5.2"
-rad = { git = "https://github.com/sdleffler/rad-rs" }
+rad = "0.3.0"
 seahash = "3.0.5"
 serde = "1.0.11"
 serde_derive = "1.0.11"
 sha3 = "0.6.0"
 slog = "2.0.6"
 toml = "0.4.4"
+typenum = "1.9.0"
+
+[dependencies.chrono]
+features = ["serde"]
+version = "0.4.0"
 
 [dependencies.clap]
 optional = true
 version = "2.26.0"
+
+[dependencies.generic-array]
+features = ["serde"]
+version = "0.8.2"
 
 [features]
 binaries = ["clap"]
