--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,19 +3,26 @@ authors = ["Sean Leffler <sean@errno.com>"]
 name = "attaca"
 version = "0.1.0"
 
+[lib]
+name = "attaca"
+path = "src/lib.rs"
+
 [[bin]]
 doc = false
 name = "attaca"
 required-features = ["binaries"]
+path = "src/bin/main.rs"
 
 [dependencies]
 bincode = "0.8.0"
-colosseum = "0.1.1"
 digest = "0.6.2"
 digest-writer = "0.2.0"
 error-chain = "0.11.0-rc.2"
-histogram = "0.6.6"
+futures = "0.1.14"
+histogram = "0.6.7"
+indicatif = "0.7.0"
 memmap = "0.5.2"
+quickcheck = "0.4.1"
 rad = "0.3.0"
 seahash = "3.0.5"
 serde = "1.0.11"
@@ -23,6 +30,7 @@ serde_derive = "1.0.11"
 sha3 = "0.6.0"
 slog = "2.0.6"
 toml = "0.4.4"
+typed-arena = "1.3.0"
 typenum = "1.9.0"
 
 [dependencies.chrono]
