--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,18 +1,14 @@
 [package]
 authors = ["Sean Leffler <sean@errno.com>"]
+description = "A resilient, distributed version control system based on Git and designed for use with extremely large repositories."
 name = "attaca"
 version = "0.1.0"
-description = "A resilient, distributed version control system based on Git and designed for use with extremely large repositories."
-
-[lib]
-name = "attaca"
-path = "src/lib.rs"
 
 [[bin]]
 doc = false
 name = "attaca"
-required-features = ["binaries"]
 path = "src/bin/main.rs"
+required-features = ["binaries"]
 
 [dependencies]
 bincode = "0.8.0"
@@ -33,6 +29,7 @@ slog = "2.0.6"
 toml = "0.4.4"
 typed-arena = "1.3.0"
 typenum = "1.9.0"
+void = "1.0.2"
 
 [dependencies.chrono]
 features = ["serde"]
@@ -51,3 +48,7 @@ binaries = ["clap"]
 default = ["dev"]
 dev = ["binaries"]
 max_level_trace = ["slog/max_level_trace"]
+
+[lib]
+name = "attaca"
+path = "src/lib.rs"
