--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,10 +12,13 @@ required-features = ["binaries"]
 
 [dependencies]
 bincode = "0.8.0"
+colosseum = "0.2.2"
 digest = "0.6.2"
 digest-writer = "0.2.0"
 error-chain = "0.11.0-rc.2"
 futures = "0.1.16"
+futures-bufio = "0.2.0"
+futures-cpupool = "0.1.6"
 histogram = "0.6.7"
 indicatif = "0.7.0"
 memmap = "0.5.2"
@@ -27,7 +30,6 @@ serde_derive = "1.0.11"
 sha3 = "0.6.0"
 slog = "2.0.6"
 toml = "0.4.4"
-typed-arena = "1.3.0"
 typenum = "1.9.0"
 void = "1.0.2"
 
