--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,7 +12,6 @@ required-features = ["binaries"]
 
 [dependencies]
 bincode = "0.8.0"
-colosseum = "0.2.2"
 digest = "0.6.2"
 digest-writer = "0.2.0"
 error-chain = "0.11.0-rc.2"
@@ -22,6 +21,7 @@ futures-cpupool = "0.1.6"
 histogram = "0.6.7"
 indicatif = "0.7.0"
 memmap = "0.5.2"
+owning_ref = "0.3.3"
 quickcheck = "0.4.1"
 rad = "0.3.2"
 seahash = "3.0.5"
