--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,7 +14,7 @@ required-features = ["binaries"]
 bincode = "0.8.0"
 digest = "0.6.2"
 digest-writer = "0.2.0"
-error-chain = "0.11.0-rc.2"
+error-chain = "0.11.0"
 futures = "0.1.16"
 futures-bufio = "0.2.0"
 futures-cpupool = "0.1.6"
@@ -23,7 +23,7 @@ indicatif = "0.7.0"
 memmap = "0.5.2"
 owning_ref = "0.3.3"
 quickcheck = "0.4.1"
-rad = "0.3.2"
+rad = "0.3.3"
 seahash = "3.0.5"
 serde = "1.0.11"
 serde_derive = "1.0.11"
