--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,6 +20,7 @@ futures-bufio = "0.2.0"
 futures-cpupool = "0.1.6"
 histogram = "0.6.7"
 indicatif = "0.7.0"
+lazy_static = "0.2.8"
 memmap = "0.5.2"
 owning_ref = "0.3.3"
 quickcheck = "0.4.1"
