--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,11 +20,11 @@ futures-bufio = "0.2.0"
 futures-cpupool = "0.1.6"
 histogram = "0.6.7"
 indicatif = "0.7.0"
+itertools = "0.6.3"
 lazy_static = "0.2.8"
 memmap = "0.5.2"
-owning_ref = "0.3.3"
 quickcheck = "0.4.1"
-rad = "0.3.3"
+rad = "0.5.0"
 seahash = "3.0.5"
 serde = "1.0.11"
 serde_derive = "1.0.11"
@@ -41,9 +41,19 @@ version = "0.4.0"
 optional = true
 version = "2.26.0"
 
+[dependencies.futures-await]
+git = "https://github.com/alexcrichton/futures-await"
+
 [dependencies.generic-array]
 features = ["serde"]
 version = "0.8.2"
+
+[dependencies.owning_ref]
+git = "https://github.com/sdleffler/owning-ref-rs"
+
+[dependencies.qp-trie]
+features = ["serde"]
+version = "0.7.1"
 
 [features]
 binaries = ["clap"]
