--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,6 +16,7 @@ digest = "0.6.2"
 digest-writer = "0.2.0"
 error-chain = "0.11.0"
 futures = "0.1.16"
+futures-await = "0.1.0"
 futures-bufio = "0.2.0"
 futures-cpupool = "0.1.6"
 globset = "0.2.0"
@@ -42,9 +43,6 @@ version = "0.4.0"
 [dependencies.clap]
 optional = true
 version = "2.26.0"
-
-[dependencies.futures-await]
-git = "https://github.com/alexcrichton/futures-await"
 
 [dependencies.generic-array]
 features = ["serde"]
