--- a/Cargo.toml
+++ b/Cargo.toml
@@ -32,6 +32,7 @@ serde = "1.0.11"
 serde_derive = "1.0.11"
 sha3 = "0.6.0"
 slog = "2.0.6"
+ssh2 = "0.3.2"
 stable_deref_trait = "1.0.0"
 toml = "0.4.4"
 typenum = "1.9.0"
