[attaca] Add im crate

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,6 +22,7 @@ globset = "0.2.0"
 hex = "0.3.1"
 histogram = "0.6.8"
 hyper = "0.11.18"
+im = "9.0.0"
 itertools = "0.6.3"
 lazy_static = "0.2.8"
 leb128 = "0.2.2"
@@ -77,4 +78,8 @@ name = "attaca"
 path = "src/lib.rs"
 
 [workspace]
-members = ["attaca-client", "attaca-rados", "attaca-leveldb"]
+members = [
+    "attaca-client",
+    "attaca-rados",
+    "attaca-leveldb",
+]
