--- a/Cargo.toml
+++ b/Cargo.toml
@@ -79,7 +79,7 @@ path = "src/lib.rs"
 
 [workspace]
 members = [
-    "attaca-client",
+    "subito",
     "attaca-rados",
     "attaca-leveldb",
 ]
