--- a/subito/Cargo.toml
+++ b/subito/Cargo.toml
@@ -8,11 +8,21 @@ version = "0.1.0"
 capnpc = "0.8.8"
 
 [dependencies]
+capnp = "0.8.15"
 db-key = "0.0.5"
+enum-primitive-derive = "0.1.2"
 failure = "0.1.1"
+futures-await = "0.1.0"
+ignore = "0.4.0"
+leb128 = "0.2.2"
 leveldb = "0.8.4"
 libc = "0.2.36"
+nix = "0.10.0"
+num-traits = "0.2.0"
 smallvec = "0.6.0"
 
 [dependencies.attaca]
 path = ".."
+
+[dependencies.attaca-leveldb]
+path = "../attaca-leveldb"
