--- a/subito/Cargo.toml
+++ b/subito/Cargo.toml
@@ -14,11 +14,13 @@ enum-primitive-derive = "0.1.2"
 failure = "0.1.1"
 futures-await = "0.1.0"
 ignore = "0.4.0"
+itertools = "0.7.6"
 leb128 = "0.2.2"
 leveldb = "0.8.4"
 libc = "0.2.36"
 nix = "0.10.0"
 num-traits = "0.2.0"
+sequence_trie = "0.3.5"
 smallvec = "0.6.0"
 
 [dependencies.attaca]
