--- a/Cargo.toml
+++ b/Cargo.toml
@@ -31,6 +31,7 @@ memchr = "2.0.1"
 memmap = "0.5.2"
 nom = "3.2.1"
 parking_lot = "0.5.3"
+proptest = "0.5.0"
 rad = "0.5.0"
 seahash = "3.0.5"
 serde = "1.0.11"
@@ -47,10 +48,6 @@ typenum = "1.9.0"
 [dependencies.chrono]
 features = ["serde"]
 version = "0.4.0"
-
-[dependencies.clap]
-optional = true
-version = "~2.29.0"
 
 [dependencies.generic-array]
 features = ["serde"]
