--- a/Cargo.toml
+++ b/Cargo.toml
@@ -30,6 +30,7 @@ libc = "0.2.29"
 memchr = "2.0.1"
 memmap = "0.5.2"
 nom = "3.2.1"
+ntriple = "0.1.1"
 parking_lot = "0.5.3"
 proptest = "0.5.0"
 rad = "0.5.0"
