--- a/subito/Cargo.toml
+++ b/subito/Cargo.toml
@@ -23,6 +23,7 @@ nix = "0.10.0"
 num-traits = "0.2.0"
 sequence_trie = "0.3.5"
 smallvec = "0.6.0"
+structopt = "0.2.3"
 
 [dependencies.attaca]
 path = ".."
