[subito] Clear out Cargo.toml cobwebs

--- a/subito/Cargo.toml
+++ b/subito/Cargo.toml
@@ -10,18 +10,14 @@ capnpc = "0.8.8"
 [dependencies]
 capnp = "0.8.15"
 db-key = "0.0.5"
-enum-primitive-derive = "0.1.2"
+derive_builder = "0.5.1"
 failure = "0.1.1"
 futures-await = "0.1.0"
 hex = "0.3.1"
 ignore = "0.4.1"
 itertools = "0.7.6"
-leb128 = "0.2.2"
 leveldb = "0.8.4"
-libc = "0.2.36"
 nix = "0.10.0"
-num-traits = "0.2.0"
-sequence_trie = "0.3.5"
 smallvec = "0.6.0"
 structopt = "0.2.3"
 
