--- a/subito/Cargo.toml
+++ b/subito/Cargo.toml
@@ -17,6 +17,7 @@ hex = "0.3.1"
 ignore = "0.4.1"
 itertools = "0.7.6"
 leveldb = "0.8.4"
+memmap = "0.6.2"
 nix = "0.10.0"
 smallvec = "0.6.0"
 structopt = "0.2.3"
