--- a/subito/Cargo.toml
+++ b/subito/Cargo.toml
@@ -16,9 +16,11 @@ futures-await = "0.1.0"
 hex = "0.3.1"
 ignore = "0.4.1"
 itertools = "0.7.6"
+lazy_static = "1.0.0"
 leveldb = "0.8.4"
 memmap = "0.6.2"
 nix = "0.10.0"
+regex = "0.2.6"
 smallvec = "0.6.0"
 structopt = "0.2.3"
 url = "1.7.0"
