--- a/subito/Cargo.toml
+++ b/subito/Cargo.toml
@@ -31,6 +31,9 @@ path = ".."
 [dependencies.attaca-leveldb]
 path = "../attaca-leveldb"
 
+[dependencies.attaca-rados]
+path = "../attaca-rados"
+
 [dependencies.clap]
 features = ["yaml"]
 version = "~2.30.0"
